ingress/example/deploy-b.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-b
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deploy-b
      release: stable
  template:
    metadata:
      labels:
        app: deploy-b
        release: stable
    spec:
      containers:
      - name: demoapp
        image: ikubernetes/demoapp:v1.1
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-b-svc
  namespace: default
spec:
  selector:
    app: deploy-b
    release: stable
  ports:
  - name: http
    port: 80
    targetPort: 80
