ingress/example/ingress-a.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-a
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.sirdy-a.io
    http:
      paths:
      - path:
        backend:
          serviceName: deploy-a-svc
          servicePort: 80
